--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,1 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');
 @import "tailwindcss";
+@plugin "daisyui";
+
+
+body{
+    font-family: 'Kumbh Sans',sans-serif;
+}
